--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+<script src="https://kit.fontawesome.com/81c79a5c32.js" crossorigin="anonymous"></script>
+
 body {
   background-color: #ffe5ff;
   display: flex;
